thanos-with-tls-setup/prometheus/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: alertmanager-ingress-rule
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: alert.thanos1.nadeemlabs.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9093
